fixed refresh token button z-index

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -8,6 +8,7 @@ body {
 .background_color {
   position: fixed;
   width: 100%;
+  top: 0;
   padding: 0;
   margin: 0;
   min-height: 100vh;
@@ -101,5 +102,5 @@ body {
   position: absolute;
   bottom: 24px;
   left: 32px;
-  z-index: 999;
+  z-index: 99999;
 }
